# kparts

./: .git-blame-ignore-revs  .gitlab-ci.yml  .kde-ci.yml  .reviewboardrc  CMakeLists.txt  KF5PartsConfig.cmake.in  KF6PartsConfig.cmake.in  README.KF6.md  README.md  metainfo.yaml
autotests/: CMakeLists.txt  notepad.cpp  notepad.desktop  notepad.h  notepad.json  openorsavequestion_unittest.cpp  partloadertest.cpp  parttest.cpp  parttest.h
docs/: Doxyfile.local
po/af/: kparts5.po  kparts6.po
po/ar/: kparts5.po  kparts6.po
po/as/: kparts5.po  kparts6.po
po/ast/: kparts5.po  kparts6.po
po/az/: kparts5.po  kparts6.po
po/be/: kparts5.po  kparts6.po
po/be@latin/: kparts5.po  kparts6.po
po/bg/: kparts5.po  kparts6.po
po/bn/: kparts5.po  kparts6.po
po/bn_IN/: kparts5.po  kparts6.po
po/br/: kparts5.po  kparts6.po
po/bs/: kparts5.po  kparts6.po
po/ca/: kparts5.po  kparts6.po
po/ca@valencia/: kparts5.po  kparts6.po
po/crh/: kparts5.po  kparts6.po
po/cs/: kparts5.po  kparts6.po
po/csb/: kparts5.po  kparts6.po
po/cy/: kparts5.po  kparts6.po
po/da/: kparts5.po  kparts6.po
po/de/: kparts5.po  kparts6.po
po/el/: kparts5.po  kparts6.po
po/en_GB/: kparts5.po  kparts6.po
po/eo/: kparts5.po  kparts6.po
po/es/: kparts5.po  kparts6.po
po/et/: kparts5.po  kparts6.po
po/eu/: kparts5.po  kparts6.po
po/fa/: kparts5.po  kparts6.po
po/fi/: kparts5.po  kparts6.po
po/fr/: kparts5.po  kparts6.po
po/fy/: kparts5.po  kparts6.po
po/ga/: kparts5.po  kparts6.po
po/gd/: kparts5.po  kparts6.po
po/gl/: kparts5.po  kparts6.po
po/gu/: kparts5.po  kparts6.po
po/ha/: kparts5.po  kparts6.po
po/he/: kparts5.po  kparts6.po
po/hi/: kparts5.po  kparts6.po
po/hne/: kparts5.po  kparts6.po
po/hr/: kparts5.po  kparts6.po
po/hsb/: kparts5.po  kparts6.po
po/hu/: kparts5.po  kparts6.po
po/hy/: kparts5.po  kparts6.po
po/ia/: kparts5.po  kparts6.po
po/id/: kparts5.po  kparts6.po
po/is/: kparts5.po  kparts6.po
po/it/: kparts5.po  kparts6.po
po/ja/: kparts5.po  kparts6.po
po/ka/: kparts5.po  kparts6.po
po/kk/: kparts5.po  kparts6.po
po/km/: kparts5.po  kparts6.po
po/kn/: kparts5.po  kparts6.po
po/ko/: kparts5.po  kparts6.po
po/ku/: kparts5.po  kparts6.po
po/lb/: kparts5.po  kparts6.po
po/lt/: kparts5.po  kparts6.po
po/lv/: kparts5.po  kparts6.po
po/mai/: kparts5.po  kparts6.po
po/mk/: kparts5.po  kparts6.po
po/ml/: kparts5.po  kparts6.po
po/mr/: kparts5.po  kparts6.po
po/ms/: kparts5.po  kparts6.po
po/my/: kparts5.po  kparts6.po
po/nb/: kparts5.po  kparts6.po
po/nds/: kparts5.po  kparts6.po
po/ne/: kparts5.po  kparts6.po
po/nl/: kparts5.po  kparts6.po
po/nn/: kparts5.po  kparts6.po
po/oc/: kparts5.po  kparts6.po
po/or/: kparts5.po  kparts6.po
po/pa/: kparts5.po  kparts6.po
po/pl/: kparts5.po  kparts6.po
po/ps/: kparts5.po  kparts6.po
po/pt/: kparts5.po  kparts6.po
po/pt_BR/: kparts5.po  kparts6.po
po/ro/: kparts5.po  kparts6.po
po/ru/: kparts5.po  kparts6.po
po/sa/: kparts6.po
po/se/: kparts5.po  kparts6.po
po/si/: kparts5.po  kparts6.po
po/sk/: kparts5.po  kparts6.po
po/sl/: kparts5.po  kparts6.po
po/sq/: kparts5.po  kparts6.po
po/sr/: kparts5.po  kparts6.po
po/sr@ijekavian/: kparts5.po  kparts6.po
po/sr@ijekavianlatin/: kparts5.po  kparts6.po
po/sr@latin/: kparts5.po  kparts6.po
po/sv/: kparts5.po  kparts6.po
po/ta/: kparts5.po  kparts6.po
po/te/: kparts5.po  kparts6.po
po/tg/: kparts5.po  kparts6.po
po/th/: kparts5.po  kparts6.po
po/tr/: kparts5.po  kparts6.po
po/tt/: kparts5.po  kparts6.po
po/ug/: kparts5.po  kparts6.po
po/uk/: kparts5.po  kparts6.po
po/uz/: kparts5.po  kparts6.po
po/uz@cyrillic/: kparts5.po  kparts6.po
po/vi/: kparts5.po  kparts6.po
po/wa/: kparts5.po  kparts6.po
po/x-test/: kparts5.po
po/xh/: kparts5.po  kparts6.po
po/zh_CN/: kparts5.po  kparts6.po
po/zh_HK/: kparts5.po  kparts6.po
po/zh_TW/: kparts5.po  kparts6.po
src/: CMakeLists.txt  Messages.sh  browserarguments.cpp  browserarguments.h  browserextension.cpp  browserextension.h  browserhostextension.cpp  browserhostextension.h  browserinterface.cpp  browserinterface.h  browseropenorsavequestion.cpp  browseropenorsavequestion.h  browserrun.cpp  browserrun.h  browserrun_p.h  browserview.desktop  event.cpp  event.h  event_p.h  fileinfoextension.cpp  fileinfoextension.h  guiactivateevent.cpp  guiactivateevent.h  historyprovider.cpp  historyprovider.h  htmlextension.cpp  htmlextension.h  htmlsettingsinterface.cpp  htmlsettingsinterface.h  kde_terminal_interface.h  kpart.desktop  kparts-index.qdoc  kparts-readonlypart.desktop  kparts-readwritepart.desktop  kparts.qdoc  kparts.qdocconf  krop.desktop  krwp.desktop  listingextension.cpp  listingextension.h  (+49 more)
src/qml/: qml.cpp  qml.h
src/shared/: mimeutils.h
templates/: CMakeLists.txt
templates/kparts6-app/: kparts6-app.kdevtemplate
templates/kparts6-app/src/part/: %{APPNAMELC}part.cpp  %{APPNAMELC}part.json
templates/kpartsapp/: CMakeLists.txt  kpartsapp.kdevtemplate
templates/kpartsapp/src/part/: %{APPNAMELC}part.cpp  %{APPNAMELC}part.desktop  %{APPNAMELC}part.h  %{APPNAMELC}part.qrc  CMakeLists.txt
templates/kpartsapp/src/shell/: %{APPNAMELC}.desktop  %{APPNAMELC}shell.cpp  %{APPNAMELC}shell.h  CMakeLists.txt  main.cpp
tests/: CMakeLists.txt  normalktm.cpp  normalktm.h  notepad.cpp  notepad.h  openorsavequestion.cpp  parts.cpp  parts.h  partviewer.cpp  partviewer.h  partviewer_shell.rc  plugin_spellcheck.cpp  plugin_spellcheck.h  terminal_test.cpp  testmainwindow.cpp  testmainwindow.h
